1. getOrDefault 简化：构造函数内默认使用 DEFAULT_PROMPT_TEMPLATE，避免了每次调用时进行判断。 2. 流操作的优化：通过使用 collect(Collectors.toList()) 替代 toList()，这样更加明确，并且在较大的数据集下有更好的性能表现。 3. generateCypherQuery 方法简化：直接返回匹配的 Cypher 查询，避免不必要的正则匹配和字符串操作。